<resources>
    <string name="app_name">AADPP</string>
    <string name="tab_text_1">Learning Leaders</string>
    <string name="tab_text_2">Skill IQ Leaders</string>
    <string name="label_leaderboard">Leaderboard</string>
    <string name="btn_label_submit">Submit</string>
    <string name="desc_gads_banner">Gads Banner</string>
    <string name="label_project_submission">Project Submission</string>
    <string name="desc_back_button">Back Button</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_email_address">Email Address</string>
    <string name="hint_project_link">Project on GITHUB (link)</string>
    <string name="label_loading">Loading...</string>
    <string name="msg_no_record">No record available</string>
    <string name="desc_leader_banner">Leader Banner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_are_you_sure">Are you sure</string>
    <string name="desc_question_mark">Question Mark</string>
    <string name="btn_label_yes">Yes</string>
    <string name="label_submission_successful">Submission Successful</string>
    <string name="label_submission_failed">Submission not Successful</string>
</resources>