<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    tools:context=".ui.activities.SubmitActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="?actionBarSize"
        android:layout_marginEnd="?actionBarSize"
        android:contentDescription="@string/desc_gads_banner"
        app:layout_constraintBottom_toBottomOf="@+id/ibBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ibBack"
        app:srcCompat="@drawable/gads_header" />

    <ImageButton
        android:id="@+id/ibBack"
        android:layout_width="?actionBarSize"
        android:layout_height="?actionBarSize"
        android:layout_marginTop="@dimen/dimens_8"
        android:background="@android:color/transparent"
        android:contentDescription="@string/desc_back_button"
        android:tint="@android:color/white"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/label_project_submission"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="?actionBarSize"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="?actionBarSize"
        android:background="@drawable/gradient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />
</androidx.constraintlayout.widget.ConstraintLayout>